fixed bug:white bar while scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     min-height: 100vh;
-    background: url('/images/idk.jpg') no-repeat center center;
+    background: url('/images/idk.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -327,5 +327,8 @@ select:focus {
         width: 80%; 
         margin: 20px auto 0; 
         display: block;
+    }
+    body {
+        background-attachment: scroll;
     }
 }
